# image-video-data-annotation-tool

./: .cursorrules  .gitignore  README.md  pyproject.toml
datas/: 正射图
scripts/: run_orthomosaic_tree_damage.py  serve_orthomosaic_dashboard.py
src/annotation_tool/utils/: geometry.py  json_io.py  llm.py
src/core/: llm_qwenvl_api_controller.py
src/tasks/: __init__.py  orthomosaic_tree_damage.py
src/utils/: __init__.py  json_io.py  llm.py
src/visualization/: __init__.py  orthomosaic_dashboard.py  orthomosaic_dashboard_server.py
tests/: conftest.py
tests/core/: test_llm_qwenvl_api_controller.py
tests/tasks/: test_label_studio_delivery.py  test_label_studio_ms_swift.py  test_orthomosaic_tree_damage.py
tests/utils/: __init__.py  test_geometry.py  test_json_io.py  test_llm.py
tools/convert_dataset_format/label-studio/: EXECUTION_2026-04-21.md  build_label_studio_subset.py  export_label_studio_to_ms_swift.py  label_studio_delivery.py  label_studio_ms_swift.py  package_dataset_bundle.py  run_label_studio_delivery_pipeline.py
