[project]
name = "image-video-data-annotation-tool"
version = "0.1.0"
description = "Reusable image/video preprocessing and pre-annotation pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
  "rasterio>=1.3",
  "httpx<1.0.0,>=0.25.1",
  "tenacity<9.0.0,>=8.2.3",
  "pydantic>2.0",
  "opencv-python-headless>=4.11.0.86",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.11.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["**/tests/**", "**/util/redis_*.py", "**/alembic/*.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "FLY", "PT", "RET", "SIM", "ARG", "ERA"]
ignore = ["ANN101", "ANN102", "B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.pytest.ini_options]
testpaths = ["tests"]
